unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Acumulator_Seconds__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Acumulator_Seconds__c</fullName>
    <label>Acumulator Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>