unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Amount__c</fullName>
    <formula>litify_pm__Rate__c * (litify_pm__Duration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>