unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Bill_To__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billed To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>