unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Billed__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Billed__c</fullName>
    <formula>IF(ISNULL( litify_pm__Bill__c), False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed</label>
    <type>Checkbox</type>
</CustomField>