unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Billed_By__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Billed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>