unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>