unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Duration__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Duration__c</fullName>
    <inlineHelpText>Hours</inlineHelpText>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>