unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__End_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>