unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Matter__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter__c</fullName>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>