unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Matter_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Name__c</fullName>
    <description>Shows matter display name if exist, if not show matter name</description>
    <formula>IF(NOT(ISBLANK(litify_pm__Matter__r.litify_pm__Display_Name__c)), litify_pm__Matter__r.litify_pm__Display_Name__c, litify_pm__Matter__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matter Name</label>
    <type>Text</type>
</CustomField>