unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Note__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Note__c</fullName>
    <description>This field is deprecated, use salesforce notes instead</description>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>