unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Rate__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>