unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Task_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Task_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Type</label>
    <referenceTo>litify_pm__Task_Type__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>