unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Team_Member__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>litify_pm__Matter_Team_Member__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>