unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Time_Entry_Description__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Time_Entry_Description__c</fullName>
    <label>Time Entry Description</label>
    <type>TextArea</type>
</CustomField>