unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_pm__Time_Entry_Description_Long__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Time_Entry_Description_Long__c</fullName>
    <label>Time Entry Description Long</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>