unpackaged/main/default/objects/litify_pm__Time_Entry__c/fields/litify_tso_Matter_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_tso_Matter_Display_Name__c</fullName>
    <description>Populated by process builder so that it can be used as the secondary field in search layout.</description>
    <label>Matter Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>