unpackaged/main/default/objects/litify_pm__Time_Entry__c/listViews/litify_pm__All.listView-meta.xml
<ListView>
    <fullName>litify_pm__All</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__Matter__c</columns>
    <columns>litify_pm__Matter_Name__c</columns>
    <columns>litify_pm__Billed_By__c</columns>
    <columns>litify_pm__Bill_To__c</columns>
    <columns>litify_pm__Amount__c</columns>
    <columns>litify_pm__Date__c</columns>
    <columns>litify_pm__Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>